# Project_sig_ma

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/askey/zwavecontrolserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.cfg  zipgateway.cfg  zwave_device_rec.txt
app/src/main/cpp/: usbserial-jni.cpp  zwcontrol-jni.cpp
app/src/main/cpp/libusb/: CMakeLists.txt  config.h
app/src/main/cpp/libusb/libusb/: io.c
app/src/main/cpp/openssl-1.0.2l/: CMakeLists.txt
app/src/main/cpp/openssl-1.0.2l/crypto/: buildinf.h
app/src/main/cpp/openssl-1.0.2l/crypto/bio/: bio_lib.c  bss_sock.c
app/src/main/cpp/openssl-1.0.2l/include/openssl/: bio.h  opensslconf.h  ssl.h
app/src/main/cpp/openssl-1.0.2l/ssl/: ssl_lib.c
app/src/main/cpp/zipgateway/: CMakeLists.txt  LICENSE  README  README.cmake  README.raspberry_pi  pkgconfig.h
app/src/main/cpp/zipgateway/Z-Wave/include/: ZW_SerialAPI.h  ZW_basis_api.h  ZW_classcmd.h  ZW_controller_api.h  ZW_controller_bridge_api.h  ZW_controller_static_api.h  ZW_mem_api.h  ZW_nodemask_api.h  ZW_sysdefs.h  ZW_timer_api.h  ZW_transport_api.h  ZW_typedefs.h  config_lib.h
app/src/main/cpp/zipgateway/beaglebone/: README.wifi.sdcard_image  change_wireless_interface.sh  create_beaglebone_tarball.sh  fix_network.sh  install_bb.sh  install_wifi.sh  restore_network.sh  uninstall_bb.sh  zipgateway.bb  zipgateway_wlan.bb
app/src/main/cpp/zipgateway/cmake/: BeagleBoneToolchain.cmake  Rpi.cmake
app/src/main/cpp/zipgateway/contiki/: Makefile.include  checkout_contiki.bat
app/src/main/cpp/zipgateway/contiki/core/: contiki-net-ipv4.h  contiki-net.h
app/src/main/cpp/zipgateway/convert_eeprom/: CMakeLists.txt  convert_eeprom.c
app/src/main/cpp/zipgateway/files/: zipgateway  zipgateway.cfg  zipgateway.cmake.in  zipgateway.fin  zipgateway.tun  zipgateway_provisioning_list.cfg.template
app/src/main/cpp/zipgateway/files/scripts/: conffiles  postinst  postrm
app/src/main/cpp/zipgateway/libs2/: CMakeFunctions.cmake  CMakeLists.txt
app/src/main/cpp/zipgateway/libs2/TestFramework/: CMakeFunctions.cmake  CMakeLists.txt  gen_test_runner.py
app/src/main/cpp/zipgateway/libs2/crypto/: CMakeLists.txt
app/src/main/cpp/zipgateway/libs2/doc/: Doxyfile  main.dox
app/src/main/cpp/zipgateway/libs2/include/: S2.h  S2_external.h  ZW_s2_key_scrambler.h  aes.h  aes_cmac.h  ccm.h  ctr_drbg.h  curve25519.h  kderiv.h  misc.h  nextnonce.h  platform.h  s2_classcmd.h  s2_event.h  s2_inclusion.h  s2_keystore.h  s2_protocol.h  transport_service2_external.h
app/src/main/cpp/zipgateway/libs2/inclusion/: TODO.txt  s2_inclusion.c
app/src/main/cpp/zipgateway/libs2/protocol/: CMakeLists.txt  S2.c
app/src/main/cpp/zipgateway/libs2/test/: CMakeLists.txt  aes_test.c  clock_time.c  new_test_t2.c  prng_test.c  test_aes_cmac.c  test_ccm.c  test_ctr_dbrg.c  test_curve25519.c  test_kderiv.c  test_key_scramble.c  test_protocol.c  wc_util.c  wc_util.h
app/src/main/cpp/zipgateway/libs2/transport_service/: ZW_ctimer.h  transport2_fsm.c  transport2_fsm.h  transport_service2.c  transport_service2.h  ts_types.h
app/src/main/cpp/zipgateway/src/: Bridge.c  Bridge.h  CC_FirmwareUpdate.c  CC_FirmwareUpdate.h  CC_Gateway.c  CC_Gateway.h  CC_InclusionController.c  CC_InclusionController.h  CC_InstalltionAndMaintenance.c  CC_InstalltionAndMaintenance.h  CC_ManufacturerSpecific.c  CC_NetworkManagement.c  CC_NetworkManagement.h  CC_Portal.c  CC_Portal.h  CC_PowerLevel.c  CC_Supervision.c  CC_Version.c  CC_ZIPNaming.c  CC_ZWavePlus.c  CC_provisioning_list.c  CC_provisioning_list.h  ClassicZIPNode.c  ClassicZIPNode.h  CommandAnalyzer.c  CommandAnalyzer.h  DTLS_server.c  DTLS_server.h  DataStore.h  Mailbox.c  Mailbox.h  NodeCache.h  RD_DataStore.c  RD_DataStore.h  RD_internal.c  RD_internal.h  ReadMeWin32.txt  ResourceDirectory.c  ResourceDirectory.h  SerialAPI_eeprom.c  (+51 more)
app/src/main/cpp/zipgateway/src-gen/: get_list.c  lex.yy.c  pvs_cfg.tab.c  pvs_cfg.tab.h
app/src/main/cpp/zipgateway/src/doc/: Doxyfile  Doxyfile.in  groups.dox  main.dox  main.dox.in  zipgateway.3
app/src/main/cpp/zipgateway/src/serialapi/: Serialapi.c  Serialapi.h  Serialapi_ax110xx.c  conhandle.c  conhandle.h  linux.c  port.h  serialapi_test.c  windows.c
app/src/main/cpp/zipgateway/src/transport/: S2_wrap.c  S2_wrap.h  Security_Scheme0.c  Security_Scheme0.h  ZW_PRNG.c  ZW_PRNG.h  ZW_SendDataAppl.c  ZW_SendDataAppl.h  ZW_SendRequest.c  ZW_SendRequest.h  rijndael-alg-fst.c  rijndael-alg-fst.h  s2_keystore.c  security_layer.c  security_layer.h
app/src/main/cpp/zipgateway/src/zwpgrmr/: crc32.c  crc32.h  linux_serial_interface.c  linux_serial_interface.h  linux_usb_interface.c  linux_usb_interface.h  zpg.c  zpg.h  zpgp.c  zpgp.h
app/src/main/cpp/zipgateway/test/: CMakeLists.txt  eeprom-stub.c  test_helpers.c  test_helpers.h
app/src/main/cpp/zipgateway/test/CC_provisioning_list/: CMakeLists.txt  test_CC_provisioning_list.c  test_CC_provisioning_list2.c
app/src/main/cpp/zipgateway/test/ZIP_router/: CMakeLists.txt  test_ZIP_router.c
app/src/main/cpp/zipgateway/test/pvs/: CMakeLists.txt  pvs_cfg_test_help.c  pvs_cfg_test_help.h  test_provisioning_list.c  test_pvs_cfg_errors.c  test_pvs_cfg_reader.c  test_pvs_dev_lookups.c  test_pvs_persistence.c
app/src/main/cpp/zipgateway/test/zwlog/: CMakeLists.txt  test_log_main.c  test_log_second.c
app/src/main/cpp/zipgateway/udprelay/: CMakeLists.txt  udprelay.c
app/src/main/cpp/zwcontrol/: CMakeLists.txt  zwcontrol_api.c  zwcontrol_api.h
app/src/main/cpp/zwcontrol/zwapi/: INSTALL  Makefile  build_openssl_lib.sh  build_using_android_toolchain.sh  cmdclass_info.txt  download_android_ndk.sh  install_android_toolchain.sh  install_openssl_lib.sh  zipctl.sln
app/src/main/cpp/zwcontrol/zwapi/config/: device_rec_constants.txt  readme.txt  sample_device_rec.txt  sample_device_rec_with_comment.txt
app/src/main/cpp/zwcontrol/zwapi/demos/: INSTALL  Makefile
app/src/main/res/layout/: activity_main.xml  window_layout.xml
app/src/main/res/raw/: zwave.db
app/src/main/res/values/: strings.xml
(+237 files in other folders)
